infrastructure/monitoring/uptime-kuma/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma
  namespace: monitoring
spec:
  hostnames:
    - uptime-kuma.tomasmerino.com
  parentRefs:
    - name: homelab-gateway
      namespace: networking
  rules:
    - backendRefs:
      - name: uptime-kuma
        port: 3001
